[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-custom-component"
version = "0.1.0"
description = "Un composant Streamlit personnalisé pour le développement local"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["streamlit_custom_component*"] 