[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-image-carousel"
version = "1.0.0"
description = "Un composant Streamlit moderne pour créer des carrousels d'images interactifs"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["streamlit_image_carousel*"] 